# desktop

./: .flake8  .gitignore  .gitmodules  README.md  config.cfg.sample  mqtt-io.yml  pyproject.toml
src/: __init__.py  app.py  config.py  constants.py  errors.py  signals.py
src/admin/: __init__.py  api.py  models.py  resources.py  validators.py
src/clients/: __init__.py  ai_grpc.py  base.py  mqtt_client.py
src/device/: __init__.py  models.py  resources.py
src/dialogue/: __init__.py  api.py  validators.py
src/proto/: service.proto  service_pb2.py  service_pb2_grpc.py
src/utils/: __init__.py  constants.py  datastructures.py  jwt_utils.py
src/utils/admin/: __init__.py  app.py  displays.py  inputs.py  models.py  resources.py  routers.py
tests/: __init__.py
